Major rewrite of TrackService; included logging along with it (slf4j + log4j2)