@@ -2,93 +2,98 @@ package com.example.musicbooru.service;
 
 import com.example.musicbooru.model.Track;
 import com.example.musicbooru.repository.TrackRepository;
-import org.jaudiotagger.audio.AudioFile;
-import org.jaudiotagger.audio.AudioFileIO;
-import org.jaudiotagger.audio.exceptions.CannotReadException;
-import org.jaudiotagger.audio.exceptions.InvalidAudioFrameException;
-import org.jaudiotagger.audio.exceptions.ReadOnlyFileException;
+import com.example.musicbooru.util.JaudiotaggerWrapper;
 import org.jaudiotagger.tag.FieldKey;
-import org.jaudiotagger.tag.Tag;
-import org.jaudiotagger.tag.TagException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.*;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 
-import org.apache.commons.io.FilenameUtils;
-
-import javax.imageio.ImageIO;
-
 @Service
 public class TrackService {
 
+    private final Logger logger = LoggerFactory.getLogger(TrackService.class.getName());
     private final TrackRepository trackRepository;
+
+    public final static String library = "./library/";
+    public final static String artwork = "./artwork/";
 
     public TrackService(TrackRepository trackRepository) {
         this.trackRepository = trackRepository;
     }
 
-    public void addTrack(MultipartFile file) throws IOException, CannotReadException, TagException, InvalidAudioFrameException, ReadOnlyFileException {
-        // Create library directory if it does not exist already
-        Path libraryDir = Paths.get("./tracks/covers");
-        Files.createDirectories(libraryDir);
-
-        // Save as temporary file for metadata extraction
-        String originalFilename = file.getOriginalFilename(); // The file extension needs to be preserved for Jaudiotagger to work
-        if(originalFilename == null) {
-            throw new IllegalArgumentException("File must have a name");
+    public void uploadTrack(MultipartFile file) {
+        try {
+            // Create directories for the audio files and accompanying artwork, if said directories don't exist
+            Files.createDirectories(Path.of(library));
+            Files.createDirectories(Path.of(artwork));
+        } catch(IOException e) {
+            logger.error("Could not create directory; an I/O error occurred", e);
         }
-        String extension = "." + FilenameUtils.getExtension(originalFilename);
-        Path tmpFile = Files.createTempFile(null, extension);
-        Files.copy(file.getInputStream(), tmpFile, StandardCopyOption.REPLACE_EXISTING);
 
-        // Derive proper file name from metadata
-        AudioFile audioFile = AudioFileIO.read(tmpFile.toFile());
-        Tag tag = audioFile.getTag();
-        String derivedFileName = tag.getFirst(FieldKey.ARTIST) + " - " + tag.getFirst(FieldKey.TITLE) + extension;
+        // TODO Support more audio formats
+        final String fileExtension = ".flac"; // Assuming FLAC for now
+        try {
+            // Save song as temporary file for metadata extraction
+            Path tmp = Files.createTempFile(null, fileExtension);
+            Files.copy(file.getInputStream(), tmp, StandardCopyOption.REPLACE_EXISTING);
 
-        // Move the file to the library directory
-        Files.move(tmpFile, Paths.get("./tracks", derivedFileName), StandardCopyOption.REPLACE_EXISTING);
+            // Construct file name from metadata
+            JaudiotaggerWrapper jwrap = new JaudiotaggerWrapper(tmp.toFile());
+            final String fileName = jwrap.constructFileName();
 
-        Track newTrack = Track.builder()
-                .fileName(derivedFileName)
-                .title(tag.getFirst(FieldKey.TITLE))
-                .album(tag.getFirst(FieldKey.ALBUM))
-                .artist(tag.getFirst(FieldKey.ARTIST))
-                .genre(tag.getFirst(FieldKey.GENRE))
-                .year(tag.getFirst(FieldKey.YEAR))
-                .sampleRate(audioFile.getAudioHeader().getSampleRate())
-                .build();
+            // Move song to the library directory
+            final Path target = Paths.get(library + fileName);
+            if(Files.exists(target)) {
+                logger.warn("File \"{}\" already exists and will be overwritten", fileName);
+            }
+            Files.move(tmp, target, StandardCopyOption.REPLACE_EXISTING);
 
-        trackRepository.save(newTrack);
+            // Make database entry
+            Track track = Track.builder()
+                    .title(jwrap.getTag().getFirst(FieldKey.TITLE))
+                    .artist(jwrap.getTag().getFirst(FieldKey.ARTIST))
+                    .album(jwrap.getTag().getFirst(FieldKey.ALBUM))
+                    .genre(jwrap.getTag().getFirst(FieldKey.GENRE))
+                    .year(jwrap.getTag().getFirst(FieldKey.YEAR))
+                    .fileName(fileName)
+                    .hasArtwork(false)
+                    .build();
+            trackRepository.save(track);
 
-        // Extract cover art and save it in `./tracks/cover/` using the song's ID as the file name
-        byte[] imageData = tag.getFirstArtwork().getBinaryData(); // NullPointer
-        if(imageData != null) {
-            ByteArrayInputStream bais = new ByteArrayInputStream(imageData);
-            BufferedImage image = ImageIO.read(bais);
-            File outputFile = new File("./tracks/covers/" + newTrack.getId() + ".jpg");
-            ImageIO.write(image, "jpg", outputFile);
+            // Extract cover art
+            if(jwrap.extractArtwork(track.getId())) {
+                track.setHasArtwork(true);
+            }
+
+            logger.info("Uploaded track with ID {}", track.getId());
+        } catch(IOException e) {
+            logger.error("Could not create temporary file; an I/O error occurred", e);
         }
     }
 
-    public void deleteTrack(String id) throws NoSuchElementException, IOException {
-        Track toBeDeleted = trackRepository.findById(id).orElseThrow();
-        Path path = Paths.get("./tracks/", toBeDeleted.getFileName());
-        Path coverPath = Paths.get("./tracks/covers/", toBeDeleted.getId() + ".jpg");
-        Files.delete(path);
-        Files.delete(coverPath);
-        trackRepository.deleteById(id);
+    public void deleteTrack(String id) {
+        try {
+            Track track = trackRepository.findById(id).orElseThrow();
+            try {
+                trackRepository.delete(track);
+                Files.delete(Paths.get(library + track.getFileName()));
+                Files.delete(Paths.get(artwork + track.getId() + ".jpg"));
+                logger.info("Deleted track with ID {}", id);
+            } catch(NoSuchFileException e) {
+                logger.error("File does not exist", e);
+            } catch(IOException e) {
+                logger.error("Could not delete file; an I/O error occurred", e);
+            }
+        } catch(NoSuchElementException e) {
+            logger.error("Could not find track with ID {}", id, e);
+        }
     }
 
     public Optional<Track> getTrackById(String id) {
